--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 
   </head>
   <body>
@@ -20,6 +20,15 @@
     <section class="d-flex flex-column h-100">
       <div class="container" id="messages-wrapper">
         <ul id="messages"></ul>
+
+        <script type="text/javascript">
+          var socket = io();
+          var el = document.getElementById('server-time');
+
+          socket.on('time', function(timeString) {
+            el.innerHTML = 'Server time: ' + timeString;
+          });
+        </script>
       </div>
 
       <form action="" id="input-form">
@@ -27,8 +36,6 @@
       </form>
 
     </section>
-
-    <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
     </script>
