--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <script src="js/socket.io/socket.io.js"></script>
     <script>
-      var socket = io.connect('http://localhost:4200');
+      var socket = io.connect();
       socket.on('connect', function(data) {
           socket.emit('join', 'Hello World from client');
       });
