--- a/index.html
+++ b/index.html
@@ -1,37 +1,13 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Testing</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
-
-  </head>
   <body>
-    <section class="d-flex flex-column h-100">
-      <div class="container" id="messages-wrapper">
-        <ul id="messages"></ul>
-
-      </div>
-
-      <form action="" id="input-form">
-        <input id="messages-field" autocomplete="off" /><button>Send</button>
-      </form>
-
-    </section>
-
-    <script src="js/socket.io/socket.io.js"></script>
+    <p id='server-time'></p>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io.connect();
-      socket.on('connect', function(data) {
-          socket.emit('join', 'Hello World from client');
+      var socket = io();
+      var el = document.getElementById('server-time');
+
+      socket.on('time', function(timeString) {
+        el.innerHTML = 'Server time: ' + timeString;
       });
     </script>
   </body>
