--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <style>
+    body, html { height: 100%; }
       * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
       #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
+      #messages li { padding: 15px; }
+      #messages li:nth-child(odd) { background: #eee;  }
+      footer {
+
+      }
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   </head>
   <body>
-    <div class="container">
-      <ul id="messages"></ul>
+    <div class="container d-flex h-100 flex-column">
+      <ul id="messages" style="flex: 1 1 auto;"></ul>
       <div class="footer">
       <form action="">
-        <input id="m" autocomplete="off" /><button>Send</button>
+        <div class="input-group input-group-lg mb-4">
+          <input type="text" id="m" class="form-control" placeholder="Chat...">
+          <span class="input-group-btn">
+            <button class="btn btn-secondary" type="button">Go!</button>
+          </span>
+        </div>
       </form>
     </div>
     </div>
