Fixed submit button.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="input-group input-group-lg mb-4">
           <input type="text" id="m" class="form-control" placeholder="Chat...">
           <span class="input-group-btn">
-            <button class="btn btn-secondary" type="button">Go!</button>
+            <button class="btn btn-secondary" type="submit">Go!</button>
           </span>
         </div>
       </form>
