--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
       socket.on('chat message', function(msg){
         $('#messages').append($('<li>').text(msg));
       });
+
+      socket.on('catch up', function( messageLog ){
+        messageLog.forEach(function(entry) {
+          console.log( entry );
+          $('#messages').append($('<li>').text(entry));
+        });
+      });
+
     });
     </script>
   </body>
